Fix sonar coverage 1 (#304)
* add test for sonar coverage

* removed unused imports

* renamed test case

* moved to private for sonar scan failure, fixed code smell

* revert back to public for request mapping signatures

* removed unnused imports